--- a/source/index.html
+++ b/source/index.html
@@ -1,57 +1,241 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>ProjectName</title>
-    <link rel="stylesheet" href="css/style.min.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <div class="container"></div>
-      </header>
-      <main>
 
-        
-      </main>
-      <footer>
-        <div class="container"></div>
-      </footer>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Компания Smart Device. Печатные платы, производство и монтаж, поставка комплектующих, блоков и модулей">
+  <title>Smart Device</title>
+  <link rel="stylesheet" href="css/style.min.css">
+</head>
 
-    <!-- Модалки -->
-    <div class="modal modal--preload" data-modal="feedback">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Обычная модалка</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite_auto.svg#icon-close"></use>
-            </svg>
-          </button>
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <a class="header__logo logo">
+          <picture>
+            <source media="(max-width: 320px)" srcset="./img/svg/logo-mobile.svg">
+            <img class="logo__image" src="./img/svg/logo.svg" width="215" height="55" alt="Логотип Smart Device.">
+          </picture>
+        </a>
+        <a class="header__email" href="mailto:info@sd.ru">info@sd.ru</a>
+        <a class="header__phone" href="tel:+74950005252">+7 (495) 000 52 52</a>
+        <button class="header__button" type="button">Заказать звонок</button>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="container">
+        <h1 class="visually-hidden">Компания Smart Device.</h1>
+        <section class="intro">
+          <h2 class="intro__title">Печатные платы</h2>
+          <p class="intro__subtitle">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+          <button class="intro__button">Получить бесплатную консультацию</button>
+
+        </section>
+        <section class="advantages">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__item-title">Оперативные сроки </h3>
+              <p class="advantages__description">Усовершенствованная логистическая система позволяет нам просчитывать
+                стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item-title">Крупные поставщики</h3>
+              <p class="advantages__description">Нашими поставщиками являются такие крупные мировые компании как: OSRAM,
+                CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей
+                продукции.</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item-title">Полная конфиденциальность</h3>
+              <p class="advantages__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__item-title">Персонализация стоимости</h3>
+              <p class="advantages__description">Персонализация стоимости</p>
+            </li>
+          </ul>
+        </section>
+        <section class="about-company">
+          <h2 class="about-company__title">О компании</h2>
+          <p class="about-company__description">Мы поставляем электронные комплектующие, производим печатные платы и
+            предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.
+          </p>
+          <p class="about-company__description">Наши поставщики - мировые производители электронных компонентов: OSRAM,
+            CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях
+            Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших
+            клиентов крупнейшие Производители светотехники России.</p>
+          <p class="about-company__description about-company__description--hidden">Smart Device - это команда
+            профессионалов. Через нас прошло более 1 000
+            000 клиентов, 70% из которых продолжают сотрудничество по сей день. На данный момент насчитывается более 14
+            офисов по всей стране и 20 городов присутствия.</p>
+          <p class="about-company__description about-company__description--hidden">Мы стремимся к постоянному развитию и
+            повышению уровня качества
+            продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и
+            время наших клиентов</p>
+          <button class="about-company__button">Подробнее</button>
+        </section>
+        <section class="catalog">
+          <h2 class="catalog__title">Smart Device предлагает следующие товары и услуги</h2>
+          <ul class="catalog__list">
+            <li class="catalog__item">
+              <a class="catalog__card" href="#">
+                <p class="catalog__card-title">Производство печатных плат</p>
+              </a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__card" href="#">
+                <p class="catalog__card-title">Монтаж печатных плат</p>
+              </a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__card" href="#">
+                <p class="catalog__card-title">Комплектующие для светотехники</p>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="feedback">
+          <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
+          <p class="feedback__subtitle">Мы проконсультируем Вас бесплатно</p>
+          <form class="feedback__form form" action="https://echo.htmlacademy.ru/" method="get">
+            <fieldset>
+              <label>
+                <input type="text" name="name" placeholder="Имя" required>
+              </label>
+              <label>
+                <input type="tel" name="phone" placeholder="Телефон" required>
+              </label>
+              <textarea name="comment" wrap="soft" placeholder="Ваш вопрос"></textarea>
+            </fieldset>
+            <button type="submit">Задать вопрос</button>
+            <fieldset>
+              <label>
+                <input type="checkbox" name="agreement">
+                Я согласен на обработку персональных данных
+              </label>
+            </fieldset>
+          </form>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <a class="footer__logo logo">
+            <picture>
+              <source media="(max-width: 320px)" srcset="./img/svg/logo-mobile.svg">
+              <img class="logo__image" src="./img/svg/logo.svg" width="215" height="55" alt="Логотип Smart Device.">
+            </picture>
+          </a>
+          <div class="footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <svg class="social__icon" width="30" height="30" fill="currentColor">
+                    <use xlink:href="./img/sprite.svg#social-ok"></use>
+                  </svg>
+                  <span class="visually-hidden">Одноклассники.</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="https://vk.com/htmlacademy" class="social__link">
+                  <svg class="social__icon" width="30" height="30" fill="currentColor">
+                    <use xlink:href="./img/sprite.svg#social-vk"></use>
+                  </svg>
+                  <span class="visually-hidden">ВКонтакте.</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <svg class="social__icon" width="30" height="30" fill="currentColor">
+                    <use xlink:href="./img/sprite.svg#social-pint"></use>
+                  </svg>
+                  <span class="visually-hidden">Pinterest.</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <nav class="footer__wrapper nav">
+          <h3 class="footer__wrapper-title">Разделы сайта</h3>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">О Компании</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Продукты</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Производство печатных плат</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Монтаж печатных плат</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Комплектующие</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Доставка</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__wrapper address">
+          <h3 class="footer__wrapper-title">Наш офис</h3>
+          <address>
+            <p class="address__item">г. Мытищи, Олимпийский проспект, д.10</p>
+            <a class="address__item" href="tel:+74955894050">+7 (495) 589-40-50</a>
+            <a class="address__item" href="tel:+79253895829">+7 (925) 389-58-29</a>
+            <a class="address__item" href="tel:+79253647813">+7 (925) 364-78-13</a>
+          </address>
         </div>
       </div>
-    </div>
+    </footer>
+  </div>
 
-    <div class="modal modal--preload modal--fit-content modal--no-scale" data-modal="success">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Размер этой модалки зависит от ширины контента,<br> отключена анимация-скейл</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite_auto.svg#icon-close"></use>
-            </svg>
-          </button>
-        </div>
+  <!-- Modal -->
+  <div class="modal modal--preload" data-modal="feedback">
+    <div class="modal__wrapper">
+      <div class="modal__overlay" data-close-modal></div>
+      <div class="modal__content">
+        <h4 class="modal__title">Закажите звонок</h4>
+        <p class="modal__description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+        <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
+          <svg width="15" height="15">
+            <use xlink:href="./img/sprite.sv g#icon-close"></use>
+          </svg>
+        </button>
+        <form class="modal__form form" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset>
+            <label>
+              <input type="text" name="name" placeholder="Имя" required>
+            </label>
+            <label>
+              <input type="tel" name="phone" placeholder="Телефон" required>
+            </label>
+            <textarea name="comment" wrap="soft" placeholder="Ваш вопрос"></textarea>
+          </fieldset>
+          <button type="submit">Отправить</button>
+          <fieldset>
+            <label>
+              <input type="checkbox" name="agreement">
+              Я согласен на обработку персональных данных
+            </label>
+          </fieldset>
+        </form>
       </div>
     </div>
+  </div>
 
-    <script src="js/vendor.min.js"></script>
-    <script src="js/main.min.js"></script>
-  </body>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
