--- a/source/index.html
+++ b/source/index.html
@@ -9,58 +9,97 @@
     content="Компания Smart Device. Печатные платы, производство и монтаж, поставка комплектующих, блоков и модулей">
   <title>Smart Device</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="./fonts/PTMono-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/RobotoCondensed-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/RobotoCondensed-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/PTMono-Regular.woff" type="font/woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/RobotoCondensed-Regular.woff" type="font/woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/RobotoCondensed-Bold.woff" type="font/woff" as="font" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="wrapper">
     <header class="header">
       <div class="container">
-        <a class="header__logo logo">
+        <a class="header__logo">
           <picture>
-            <source media="(max-width: 320px)" srcset="./img/svg/logo-mobile.svg">
-            <img class="logo__image" src="./img/svg/logo.svg" width="215" height="55" alt="Логотип Smart Device.">
+            <source media="(max-width: 769px)" srcset="./img/svg/logo-mobile.svg">
+            <img class="header__logo-image" src="./img/svg/logo.svg" width="215" height="55"
+              alt="Логотип Smart Device.">
           </picture>
         </a>
-        <a class="header__email" href="mailto:info@sd.ru">info@sd.ru</a>
-        <a class="header__phone" href="tel:+74950005252">+7 (495) 000 52 52</a>
+        <a class="header__link header__link--email" href="mailto:info@sd.ru">
+          <svg class="header__link-icon" width="20" height="20" fill="currentColor">
+            <use xlink:href="./img/sprite_auto.svg#header-email"></use>
+          </svg>
+          <span class="header__link-text">info@sd.ru</span>
+        </a>
+        <a class="header__link header__link--phone" href="tel:+74950005252">
+          <svg class="header__link-icon" width="20" height="20" fill="currentColor">
+            <use xlink:href="./img/sprite_auto.svg#header-phone"></use>
+          </svg>
+          <span class="header__link-text">+7 (495) 000 52 52</span>
+        </a>
         <button class="header__button" type="button">Заказать звонок</button>
       </div>
     </header>
 
-    <main class="main">
-      <div class="container">
-        <h1 class="visually-hidden">Компания Smart Device.</h1>
-        <section class="intro">
+    <main>
+      <h1 class="visually-hidden">Компания Smart Device.</h1>
+
+      <section class="intro">
+        <div class="container">
           <h2 class="intro__title">Печатные платы</h2>
           <p class="intro__subtitle">производство и монтаж, поставка комплектующих, блоков и модулей</p>
-          <button class="intro__button">Получить бесплатную консультацию</button>
+          <button class="intro__button">
+            <span class="intro__btn-text intro__btn-text--small">Бесплатная консультация</span>
+            <span class="intro__btn-text intro__btn-text--large">Получить бесплатную консультацию</span>
+          </button>
+        </div>
+      </section>
 
-        </section>
-        <section class="advantages">
+      <section class="advantages">
+        <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages__list">
             <li class="advantages__item">
+              <svg class="advantages__icon" width="35" height="35" fill="currentColor">
+                <use xlink:href="./img/sprite_auto.svg#stopwatch"></use>
+              </svg>
               <h3 class="advantages__item-title">Оперативные сроки </h3>
               <p class="advantages__description">Усовершенствованная логистическая система позволяет нам просчитывать
                 стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
             </li>
             <li class="advantages__item">
+              <svg class="advantages__icon" width="35" height="35" fill="currentColor">
+                <use xlink:href="./img/sprite_auto.svg#hired"></use>
+              </svg>
               <h3 class="advantages__item-title">Крупные поставщики</h3>
               <p class="advantages__description">Нашими поставщиками являются такие крупные мировые компании как: OSRAM,
                 CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей
                 продукции.</p>
             </li>
             <li class="advantages__item">
+              <svg class="advantages__icon" width="35" height="35" fill="currentColor">
+                <use xlink:href="./img/sprite_auto.svg#detective"></use>
+              </svg>
               <h3 class="advantages__item-title">Полная конфиденциальность</h3>
               <p class="advantages__description">По желанию клиента мы обеспечиваем полную конфиденциальность.</p>
             </li>
             <li class="advantages__item">
+              <svg class="advantages__icon" width="35" height="35" fill="currentColor">
+                <use xlink:href="./img/sprite_auto.svg#tag"></use>
+              </svg>
               <h3 class="advantages__item-title">Персонализация стоимости</h3>
-              <p class="advantages__description">Персонализация стоимости</p>
+              <p class="advantages__description">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы
+                установить ту цену, которая Вас устраивает.</p>
             </li>
           </ul>
-        </section>
-        <section class="about-company">
+        </div>
+      </section>
+
+      <section class="about-company">
+        <div class="container">
           <h2 class="about-company__title">О компании</h2>
           <p class="about-company__description">Мы поставляем электронные комплектующие, производим печатные платы и
             предоставляем мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.
@@ -69,18 +108,25 @@
             CREE, HOLGLITRONIC, REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях
             Российских Железных Дорог (РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших
             клиентов крупнейшие Производители светотехники России.</p>
-          <p class="about-company__description about-company__description--hidden">Smart Device - это команда
-            профессионалов. Через нас прошло более 1 000
-            000 клиентов, 70% из которых продолжают сотрудничество по сей день. На данный момент насчитывается более 14
-            офисов по всей стране и 20 городов присутствия.</p>
-          <p class="about-company__description about-company__description--hidden">Мы стремимся к постоянному развитию и
-            повышению уровня качества
-            продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и
-            время наших клиентов</p>
+          <div class="about-company__description--hidden">
+            <p class="about-company__description">Smart Device - это команда
+              профессионалов. Через нас прошло более 1 000
+              000 клиентов, 70% из которых продолжают сотрудничество по сей день. На данный момент насчитывается более 14
+              офисов по всей стране и 20 городов присутствия.</p>
+            <p class="about-company__description">Мы стремимся к постоянному развитию и
+              повышению уровня качества
+              продукции, производимой внутри компании. Использование инновационных технологий помогает экономить деньги и
+              время наших клиентов</p>
+          </div>
           <button class="about-company__button">Подробнее</button>
-        </section>
-        <section class="catalog">
-          <h2 class="catalog__title">Smart Device предлагает следующие товары и услуги</h2>
+        </div>
+      </section>
+
+      <section class="catalog">
+        <div class="container">
+          <h2 class="catalog__title catalog__title--small">Товары и услуги Smart Device</h2>
+          <h2 class="catalog__title catalog__title--large">Smart Device предлагает следующие товары и услуги</h2>
+
           <ul class="catalog__list">
             <li class="catalog__item">
               <a class="catalog__card" href="#">
@@ -98,8 +144,11 @@
               </a>
             </li>
           </ul>
-        </section>
-        <section class="feedback">
+        </div>
+      </section>
+
+      <section class="feedback" id="feedback">
+        <div class="container">
           <h2 class="feedback__title">Остались вопросы? Задайте их нам!</h2>
           <p class="feedback__subtitle">Мы проконсультируем Вас бесплатно</p>
           <form class="feedback__form form" action="https://echo.htmlacademy.ru/" method="get">
@@ -120,25 +169,24 @@
               </label>
             </fieldset>
           </form>
-        </section>
-      </div>
+        </div>
+      </section>
+
+
     </main>
 
     <footer class="footer">
       <div class="container">
-        <div class="footer__wrapper">
-          <a class="footer__logo logo">
-            <picture>
-              <source media="(max-width: 320px)" srcset="./img/svg/logo-mobile.svg">
-              <img class="logo__image" src="./img/svg/logo.svg" width="215" height="55" alt="Логотип Smart Device.">
-            </picture>
+        <div class="footer__wrapper logos">
+          <a class="logos__logo" href="#">
+            <img class="logos__logo-image" src="./img/svg/logo.svg" width="215" height="55" alt="Логотип Smart Device.">
           </a>
-          <div class="footer__social social">
+          <div class="logos__social social">
             <ul class="social__list">
               <li class="social__item">
                 <a href="#" class="social__link">
                   <svg class="social__icon" width="30" height="30" fill="currentColor">
-                    <use xlink:href="./img/sprite.svg#social-ok"></use>
+                    <use xlink:href="./img/sprite_auto.svg#social-ok"></use>
                   </svg>
                   <span class="visually-hidden">Одноклассники.</span>
                 </a>
@@ -146,7 +194,7 @@
               <li class="social__item">
                 <a href="https://vk.com/htmlacademy" class="social__link">
                   <svg class="social__icon" width="30" height="30" fill="currentColor">
-                    <use xlink:href="./img/sprite.svg#social-vk"></use>
+                    <use xlink:href="./img/sprite_auto.svg#social-vk"></use>
                   </svg>
                   <span class="visually-hidden">ВКонтакте.</span>
                 </a>
@@ -154,7 +202,7 @@
               <li class="social__item">
                 <a href="#" class="social__link">
                   <svg class="social__icon" width="30" height="30" fill="currentColor">
-                    <use xlink:href="./img/sprite.svg#social-pint"></use>
+                    <use xlink:href="./img/sprite_auto.svg#social-pint"></use>
                   </svg>
                   <span class="visually-hidden">Pinterest.</span>
                 </a>
@@ -190,7 +238,7 @@
         </nav>
         <div class="footer__wrapper address">
           <h3 class="footer__wrapper-title">Наш офис</h3>
-          <address>
+          <address class="address__list">
             <p class="address__item">г. Мытищи, Олимпийский проспект, д.10</p>
             <a class="address__item" href="tel:+74955894050">+7 (495) 589-40-50</a>
             <a class="address__item" href="tel:+79253895829">+7 (925) 389-58-29</a>
@@ -202,7 +250,7 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal modal--preload" data-modal="feedback">
+  <div class="modal modal--preload is-closed" data-modal="feedback">
     <div class="modal__wrapper">
       <div class="modal__overlay" data-close-modal></div>
       <div class="modal__content">
@@ -210,7 +258,7 @@
         <p class="modal__description">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
         <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
           <svg width="15" height="15">
-            <use xlink:href="./img/sprite.sv g#icon-close"></use>
+            <use xlink:href="./img/sprite_auto.svg#icon-close"></use>
           </svg>
         </button>
         <form class="modal__form form" action="https://echo.htmlacademy.ru/" method="get">
@@ -235,7 +283,7 @@
     </div>
   </div>
 
-  <script src="./js/main.js"></script>
+  <script src="./js/main.min.js" type="module"></script>
 </body>
 
 </html>
